--- a/index.html
+++ b/index.html
@@ -16,16 +16,8 @@
     <title>Thomas Heim | Diseño</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light navegacion">
-        <a class="navbar-brand" href="#"><svg class="navegacion__logo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-            viewBox="0 0 296.8 129.2" style="enable-background:new 0 0 296.8 129.2;" xml:space="preserve">
-       <style type="text/css">
-
-       </style>
-       <polygon class="st0" points="260.8,0 198.6,71.9 176.1,53.3 222.2,0 186.3,0 155.2,36 132.4,17.2 111.7,0 70.1,0 94.4,20.1 0,129.2 
-           36,129.2 115.4,37.5 137.8,56 74.4,129.2 110.3,129.2 158.7,73.3 181.2,92 148.9,129.2 184.9,129.2 201.8,109.6 219.6,89.1 296.8,0 
-           "/>
-       </svg></a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light navegacion" id="navegacion">
+        <a class="navbar-brand navegacion__logo" href="#"><svg class="navegacion__logo-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 296.8 129.2"><polygon points="260.8 0 198.6 71.9 176.1 53.3 222.2 0 186.3 0 155.2 36 132.4 17.2 111.7 0 70.1 0 94.4 20.1 0 129.2 36 129.2 115.4 37.5 137.8 56 74.4 129.2 110.3 129.2 158.7 73.3 181.2 92 148.9 129.2 184.9 129.2 201.8 109.6 219.6 89.1 296.8 0 "/></svg></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -34,17 +26,26 @@
             <li class="nav-item navegacion__quiensoy">
               <a class="nav-link navegacion__contenido-link" href="#">Quien soy <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle navegacion__contenido-link" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Mis trabajos
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="#">Diseño UX</a>
-                  <a class="dropdown-item" href="#">Diseño gráfico</a>
-                  <a class="dropdown-item" href="#">Ilustración</a>
-                </div>
+            <li class="nav-item d-md-none">
+              <a class="nav-link navegacion__contenido-link" href="#">Diseño UX<span class="sr-only">(current)</span></a>
             </li>
-          </ul>
+            <li class="nav-item d-md-none">
+              <a class="nav-link navegacion__contenido-link" href="#">Diseño gráfico<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item d-md-none">
+              <a class="nav-link navegacion__contenido-link" href="#">Ilustración<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item dropdown d-none d-md-block">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Mis trabajos
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Diseño UX</a>
+                <a class="dropdown-item" href="#">Diseño UI</a>
+                <a class="dropdown-item" href="#">Ilustración</a>
+              </div>
+            </li>
+          </ul> 
         </div>
     </nav>
 
@@ -52,16 +53,38 @@
         <a class="navegacion__contacto-link" href="">LinkedIn</a>
         <a class="navegacion__contacto-link" href="">Mail</a>
     </div>
+
     <header class="hero">
+      <div class="container hero__container">
+        <div class="row">
+          <h1 class="col-12 col-md-9 hero__texto"><span class="hero__texto-1">¡Hola! </span><br><span class="hero__texto-2">Soy Thomas Heim,</span> <br><button class="hero__boton-1">diseñador UX/UI</button></h1>
+        </div>
+        <div class="row hero__parrafo-2__container">
+          <h1 class="col-12 col-md-9 offset-md-3 hero__texto hero___parrafo-2"><span class="hero__texto-2">Tambien soy</span><button class="hero__boton-2">Ilustrador</button><span class="hero__texto-2">y</span><br><button class="hero__boton-2">diseñador gráfico</button></h1>
+        </div>
       </div>
     </header>
-    <main class="trabajos"> 
+    <main class="trabajos">
+      <div class="container">
+        <div class="row">
+          <button class="trabajos__boton">Proyecto 1</button> 
+        </div>
+        <div class="row">
+          <button class="trabajos__boton">Proyecto 2</button> 
+        </div>
+        <div class="row">
+          <button class="trabajos__boton">Proyecto 3</button> 
+        </div>
+        <div class="row">
+          <button class="trabajos__boton">Proyecto 4</button> 
+        </div>
+      </div>
     </main>
 <!--js js js js js js js-->
-<!--<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<script src="assets/js/navbar.js"></script>-->
+<script src="assets/js/navbar.js"></script>
 <!--js js js js js js js-->    
 </body>
 </html>
