--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </div>
     </header>
     <main class="trabajos">
-      <div class="container">
+      <div class="container trabajos__container">
         <div class="row">
           <button class="trabajos__boton">Proyecto 1</button> 
         </div>
