Composicion y proporcion de pagina listas
Las paginas funcionan, se debe hacer prueba en movil, se debe pasar a los botones

--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
     </div>
 
     <header class="hero">
-      <div class="container hero__container">
+      <div class="container-fluid hero__container">
         <div class="row">
-          <h1 class="col-12 col-md-9 hero__texto"><span class="hero__texto-1">¡Hola! </span><br><span class="hero__texto-2">Soy Thomas Heim,</span> <br><button class="hero__boton-1">diseñador UX/UI</button></h1>
+          <h1 class="col-12 col-md-9 hero__texto"><span class="hero__texto-1">¡Hola! </span><br><span class="hero__texto-2">Soy Thomas Heim,</span> <br><button class="hero__boton-1 boton__custom">diseñador UX/UI</button></h1>
         </div>
         <div class="row hero__parrafo-2__container">
-          <h1 class="col-12 col-md-9 offset-md-3 hero__texto hero___parrafo-2"><span class="hero__texto-2">Tambien soy</span><button class="hero__boton-2">Ilustrador</button><span class="hero__texto-2">y</span><br><button class="hero__boton-2">diseñador gráfico</button></h1>
+          <h1 class="col-12 col-md-9 offset-md-3 hero__texto hero___parrafo-2"><span class="hero__texto-2">Tambien soy</span><button class="hero__boton-2 boton__custom">Ilustrador</button><span class="hero__texto-2">y</span><br><button class="hero__boton-2 boton__custom">diseñador gráfico</button></h1>
         </div>
       </div>
     </header>
     <main class="trabajos">
-      <div class="container trabajos__container">
+      <div class="container-fluid trabajos__container">
         <div class="row">
           <button class="trabajos__boton">Proyecto 1</button> 
         </div>
@@ -84,7 +84,6 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<script src="assets/js/navbar.js"></script>
 <!--js js js js js js js-->    
 </body>
 </html>
