--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a class="nav-link navegacion__contenido-link" href="#">Diseño gráfico<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item d-md-none">
-            <a class="nav-link navegacion__contenido-link" href="#">Ilustración<span class="sr-only">(current)</span></a>
+            <a class="nav-link navegacion__contenido-link" href="ilustracion.html">Ilustración<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown d-none d-md-block">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -49,7 +49,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#">Diseño UX</a>
               <a class="dropdown-item" href="#">Diseño UI</a>
-              <a class="dropdown-item" href="#">Ilustración</a>
+              <a class="dropdown-item" href="ilustracion.html">Ilustración</a>
             </div>
           </li>
         </ul> 
@@ -64,7 +64,7 @@
       <a class="navegacion__contacto-link" href="">LinkedIn</a>
     </li>
   </ul>
-
+<div class="wrapper">
   <!--hero hero hero hero hero hero hero hero hero hero-->
   <header class="hero">
     <div class="container-fluid hero__container">
@@ -72,7 +72,7 @@
         <h1 class="col-12 col-md-9 hero__texto"><span class="hero__texto-1">¡Hola! </span><br><span class="hero__texto-2">Soy Thomas Heim,</span> <br><button class="hero__boton-1 boton__custom-hero1"><a href="https://www.google.cl">diseñador UX/UI</a></button></h1>
       </div>
       <div class="row hero__parrafo-2__container">
-        <h1 class="col-12 col-md-9 offset-md-3 hero__texto hero___parrafo-2"><span class="hero__texto-2">Tambien soy</span><button class="hero__boton-2 boton__custom-hero2"><a href="">Ilustrador</a></button><span class="hero__texto-2">y</span><br><button class="hero__boton-2 boton__custom-hero2"><a href="">diseñador gráfico</a></button></h1>
+        <h1 class="col-12 col-md-9 offset-md-3 hero__texto hero___parrafo-2"><span class="hero__texto-2">Tambien soy</span><button class="hero__boton-2 boton__custom-hero2"><a href="ilustracion.html">Ilustrador</a></button><span class="hero__texto-2">y</span><br><button class="hero__boton-2 boton__custom-hero2"><a href="">diseñador gráfico</a></button></h1>
       </div>
     </div>
   </header>
@@ -94,5 +94,6 @@
       </div>
     </div>
   </main>   
+</div>
 </body>
 </html>
