--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -40,7 +40,7 @@
               <a class="nav-link navegacion__contenido-link" href="#">Diseño gráfico<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item d-md-none">
-              <a class="nav-link navegacion__contenido-link" href="#">Ilustración<span class="sr-only">(current)</span></a>
+              <a class="nav-link navegacion__contenido-link" href="ilustracion.html">Ilustración<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown d-none d-md-block">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -49,7 +49,7 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">Diseño UX</a>
                 <a class="dropdown-item" href="#">Diseño UI</a>
-                <a class="dropdown-item" href="#">Ilustración</a>
+                <a class="dropdown-item" href="ilustracion.html">Ilustración</a>
               </div>
             </li>
           </ul> 
@@ -73,6 +73,12 @@
         </div>
         <div class="row">
           <p class="col-md-5 hero__parrafo-1 texto__dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil magni est doloremque sequi dolores nam neque qui! Eum obcaecati corrupti nam, delectus facilis ab rem nostrum reprehenderit temporibus fugiat hic?</p>
+        </div>
+        <div class="row">
+          <!--ACUERDATE DE PONER TU PORTAFOLIO DE VERDAD ACA CUANDO LO TERMINES-->
+          <div class="col-1 sobremi__boton">
+            <button class="boton__custom"><a href="assets/img/fotoportada.jpg" download>Descarga mi CV</a></button>
+          </div>
         </div>
       </div>
     </header>
@@ -118,10 +124,13 @@
     <section class="testimonio">
       <div class="container">
         <div class="row">
-          <h1 class="articulo__titulo testimonio__titulo">Testimonio</h1>
+          <h1 class="col-12 articulo__titulo testimonio__titulo">Testimonio</h1>
         </div>
         <div class="row">
-          <p class="articulo__parrafo-1">"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae veniam reprehenderit temporibus commodi dicta a praesentium accusamus atque illo sapiente cupiditate expedita consectetur non, porro asperiores tenetur laboriosam repellat voluptate!"</p>
+          <p class="col-12 articulo__parrafo-1">"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae veniam reprehenderit temporibus commodi dicta a praesentium accusamus atque illo sapiente cupiditate expedita consectetur non, porro asperiores tenetur Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam consectetur nibh a blandit rhoncus. Maecenas non consectetur lacus, eu congue magna. Quisque sed vulputate lectus, eget vehicula enim. Quisque turpis neque, scelerisque nec placerat in, scelerisque sed mi. Mauris malesuada ut libero eget vestibulum. Curabitur auctor quis orci sit amet tincidunt. Integer accumsan imperdiet nisl ut efficitur. Mauris ut varius ex. Proin sed pretium erat. Maecenas et pellentesque est. Sed imperdiet elit nec fringilla egestas. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur aliquam et mauris et condimentum. Sed sed aliquet massa. Cras mattis feugiat orci sit amet imperdiet. Proin elementum vitae nibh sit amet vulputate."</p>
+        </div>
+        <div class="row"> 
+          <p class="col-12 articulo__parrafo-1 articulo__firma">laboriosam repellat voluptate!</p>
         </div>
       </div>
     </section>
