--- a/diseno-grafico.html
+++ b/diseno-grafico.html
@@ -24,37 +24,38 @@
 <body>
   <!--Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light navegacion" id="navegacion">
-      <a class="navbar-brand navegacion__logo" href="index.html"><svg class="navegacion__logo-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 296.8 129.2"><polygon points="260.8 0 198.6 71.9 176.1 53.3 222.2 0 186.3 0 155.2 36 132.4 17.2 111.7 0 70.1 0 94.4 20.1 0 129.2 36 129.2 115.4 37.5 137.8 56 74.4 129.2 110.3 129.2 158.7 73.3 181.2 92 148.9 129.2 184.9 129.2 201.8 109.6 219.6 89.1 296.8 0 "/></svg></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse navegacion__contenido" id="navbarNav">
-        <ul class="navbar-nav navegacion__contenido-lista">
-          <li class="nav-item navegacion__quiensoy">
-            <a class="nav-link navegacion__contenido-link" href="sobre-mi.html">Quien soy <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item d-md-none">
-            <a class="nav-link navegacion__contenido-link" href="#">Diseño UX<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item d-md-none">
-            <a class="nav-link navegacion__contenido-link" href="#">Diseño gráfico<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item d-md-none">
-            <a class="nav-link navegacion__contenido-link" href="ilustracion.html">Ilustración<span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item dropdown d-none d-md-block">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Mis trabajos
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Diseño UX</a>
-              <a class="dropdown-item" href="#">Diseño UI</a>
-              <a class="dropdown-item" href="ilustracion.html">Ilustración</a>
-            </div>
-          </li>
-        </ul> 
-      </div>
-  </nav>
+    <a class="navbar-brand navegacion__logo" href="index.html"><svg class="navegacion__logo-icono" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 296.8 129.2"><polygon points="260.8 0 198.6 71.9 176.1 53.3 222.2 0 186.3 0 155.2 36 132.4 17.2 111.7 0 70.1 0 94.4 20.1 0 129.2 36 129.2 115.4 37.5 137.8 56 74.4 129.2 110.3 129.2 158.7 73.3 181.2 92 148.9 129.2 184.9 129.2 201.8 109.6 219.6 89.1 296.8 0 "/></svg></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse navegacion__contenido" id="navbarNav">
+      <ul class="navbar-nav navegacion__contenido-lista">
+        <li class="nav-item navegacion__quiensoy">
+          <a class="nav-link navegacion__contenido-link" href="sobre-mi.html">Quien soy <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item d-md-none">
+          <a class="nav-link navegacion__contenido-link" href="#">Diseño UX<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item d-md-none">
+          <a class="nav-link navegacion__contenido-link" href="diseno-grafico.html">Diseño gráfico<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item d-md-none">
+          <a class="nav-link navegacion__contenido-link" href="ilustracion.html">Ilustración<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item dropdown d-none d-md-block">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Mis trabajos
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Diseño UX</a>
+            <a class="dropdown-item" href="#">Diseño UI</a>
+            <a class="dropdown-item" href="diseno-grafico.html">Diseño gráfico</a>
+            <a class="dropdown-item" href="ilustracion.html">Ilustración</a>
+          </div>
+        </li>
+      </ul> 
+    </div>
+</nav>
 
   <ul class="navegacion__contacto">
     <li class="navegacion__contacto-elemento">
@@ -99,7 +100,27 @@
       <div class="modal fade" id="elemento1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-body">
-              <img class="modal__imagen" src="assets/img/ilustracion1.png" alt="Cronicas-del-estallido-1">
+              <div id="miCarrusel1" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="assets/img/ilustracion1.png" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="assets/img/ilustracion2.png" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="assets/img/ilustracion3.png" alt="Third slide">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#miCarrusel1" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#miCarrusel1" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
             </div>
         </div>
       </div>
