--- a/ilustracion.html
+++ b/ilustracion.html
@@ -28,26 +28,26 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse navegacion__contenido" id="navbarNav">
+    <div class="collapse navbar-collapse text-right navegacion__contenido" id="navbarNav">
       <ul class="navbar-nav navegacion__contenido-lista">
         <li class="nav-item navegacion__quiensoy">
           <a class="nav-link navegacion__contenido-link" href="sobre-mi.html">Quien soy <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item d-md-none">
+        <li class="nav-item d-lg-none">
           <a class="nav-link navegacion__contenido-link" href="#">Diseño UX<span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item d-md-none">
+        <li class="nav-item d-lg-none">
           <a class="nav-link navegacion__contenido-link" href="diseno-grafico.html">Diseño gráfico<span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item d-md-none">
+        <li class="nav-item d-lg-none">
           <a class="nav-link navegacion__contenido-link" href="ilustracion.html">Ilustración<span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item dropdown d-none d-md-block">
+        <li class="nav-item dropdown d-none d-lg-block">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Mis trabajos
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Diseño UX</a>
+            <a class="dropdown-item" href="index.html#disenoux">Diseño UX</a>
             <a class="dropdown-item" href="#">Diseño UI</a>
             <a class="dropdown-item" href="diseno-grafico.html">Diseño gráfico</a>
             <a class="dropdown-item" href="ilustracion.html">Ilustración</a>
@@ -71,7 +71,7 @@
     <header id="panel__fijo-ilustracion" class="panel__fijo panel galeria__header">
       <div class="container galeria__header-contenedor">
         <img class="galeria__header-imagen" src="assets/img/Graduadisimo-campeon-color-zoom.png" alt="">
-    </div>
+      </div>
     <div class="container">
         <div class="row">
             <h1 class="col-12 offset-md-2 galeria__header-titulo">//Algunas de mis <br>ilustraciones</h1>
@@ -80,7 +80,7 @@
     </header>
 
     <!--ilustracion-->
-    <section id="galeria" class="panel panel__galeria">
+    <section id="galeria" class="panel__galeria">
       <button class="btn__invisible"><img src="assets/img/ilustracion1.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento1"></button>
       <button class="btn__invisible"><img src="assets/img/ilustracion2.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento2"></button>
       <button class="btn__invisible"><img src="assets/img/ilustracion3.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento3"></button>
@@ -92,99 +92,98 @@
       <button class="btn__invisible"><img src="assets/img/ilustracion9.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento9"></button>
       <button class="btn__invisible"><img src="assets/img/ilustracion10.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento10"></button>
     </section>   
-
-    <!--MODALES-->
-    <div class="galeria__modales">
-
-      <!--elemento 1-->
-      <div class="modal fade" id="elemento1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-body">
-              <img class="modal__imagen" src="assets/img/ilustracion1.png" alt="Cronicas-del-estallido-1">
-            </div>
-        </div>
-      </div>
-
-      <!--elemento 2-->
-      <div class="modal fade" id="elemento2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-body">
-              <img class="modal__imagen" src="assets/img/ilustracion2.png" alt="Cronicas-del-estallido-1">
-            </div>
-        </div>
-      </div>
-
-      <!--elemento3-->
-      <div class="modal fade" id="elemento3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-body">
-              <img class="modal__imagen" src="assets/img/ilustracion3.png" alt="Cronicas-del-estallido-1">
-            </div>
-        </div>
-      </div>
-
-      <!--elemento 4-->
-      <div class="modal fade" id="elemento4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-body">
-              <img class="modal__imagen" src="assets/img/ilustracion4.png" alt="Cronicas-del-estallido-1">
-            </div>
-        </div>
-      </div>
-
-      <!--elemento 5-->
-      <div class="modal fade" id="elemento5" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-body">
-              <img class="modal__imagen" src="assets/img/ilustracion5.png" alt="Cronicas-del-estallido-1">
-            </div>
-        </div>
-      </div>
-
-      <!--elemento 6-->
-      <div class="modal fade" id="elemento6" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-body">
-              <img class="modal__imagen" src="assets/img/ilustracion6.png" alt="Cronicas-del-estallido-1">
-            </div>
-        </div>
-      </div>
-
-      <!--elemento 7-->
-      <div class="modal fade" id="elemento7" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-body">
-              <img class="modal__imagen" src="assets/img/ilustracion7.png" alt="Cronicas-del-estallido-1">
-            </div>
-        </div>
-      </div>
-
-      <!--elemento 8-->
-      <div class="modal fade" id="elemento8" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-body">
-              <img class="modal__imagen" src="assets/img/ilustracion8.png" alt="Cronicas-del-estallido-1">
-            </div>
-        </div>
-      </div>
-
-      <!--elemento 9-->
-      <div class="modal fade" id="elemento9" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-body">
-              <img class="modal__imagen" src="assets/img/ilustracion9.png" alt="Cronicas-del-estallido-1">
-            </div>
-        </div>
-      </div>
-
-      <!--elemento 10-->
-      <div class="modal fade" id="elemento10" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-body">
-              <img class="modal__imagen" src="assets/img/ilustracion10.png" alt="Cronicas-del-estallido-1">
-            </div>
-        </div>
-      </div>
   </div>
+      <!--MODALES-->
+      <div class="galeria__modales">
+
+        <!--elemento 1-->
+        <div class="modal fade" id="elemento1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+              <div class="modal-body">
+                <img class="modal__imagen" src="assets/img/ilustracion1.png" alt="Cronicas-del-estallido-1">
+              </div>
+          </div>
+        </div>
+  
+        <!--elemento 2-->
+        <div class="modal fade" id="elemento2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+              <div class="modal-body">
+                <img class="modal__imagen" src="assets/img/ilustracion2.png" alt="Cronicas-del-estallido-1">
+              </div>
+          </div>
+        </div>
+  
+        <!--elemento3-->
+        <div class="modal fade" id="elemento3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+              <div class="modal-body">
+                <img class="modal__imagen" src="assets/img/ilustracion3.png" alt="Cronicas-del-estallido-1">
+              </div>
+          </div>
+        </div>
+  
+        <!--elemento 4-->
+        <div class="modal fade" id="elemento4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+              <div class="modal-body">
+                <img class="modal__imagen" src="assets/img/ilustracion4.png" alt="Cronicas-del-estallido-1">
+              </div>
+          </div>
+        </div>
+  
+        <!--elemento 5-->
+        <div class="modal fade" id="elemento5" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+              <div class="modal-body">
+                <img class="modal__imagen" src="assets/img/ilustracion5.png" alt="Cronicas-del-estallido-1">
+              </div>
+          </div>
+        </div>
+  
+        <!--elemento 6-->
+        <div class="modal fade" id="elemento6" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+              <div class="modal-body">
+                <img class="modal__imagen" src="assets/img/ilustracion6.png" alt="Cronicas-del-estallido-1">
+              </div>
+          </div>
+        </div>
+  
+        <!--elemento 7-->
+        <div class="modal fade" id="elemento7" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+              <div class="modal-body">
+                <img class="modal__imagen" src="assets/img/ilustracion7.png" alt="Cronicas-del-estallido-1">
+              </div>
+          </div>
+        </div>
+  
+        <!--elemento 8-->
+        <div class="modal fade" id="elemento8" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+              <div class="modal-body">
+                <img class="modal__imagen" src="assets/img/ilustracion8.png" alt="Cronicas-del-estallido-1">
+              </div>
+          </div>
+        </div>
+  
+        <!--elemento 9-->
+        <div class="modal fade" id="elemento9" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+              <div class="modal-body">
+                <img class="modal__imagen" src="assets/img/ilustracion9.png" alt="Cronicas-del-estallido-1">
+              </div>
+          </div>
+        </div>
+  
+        <!--elemento 10-->
+        <div class="modal fade" id="elemento10" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+              <div class="modal-body">
+                <img class="modal__imagen" src="assets/img/ilustracion10.png" alt="Cronicas-del-estallido-1">
+              </div>
+          </div>
+        </div>
 </body>
 </html>
