--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -28,26 +28,26 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse navegacion__contenido" id="navbarNav">
+      <div class="collapse navbar-collapse text-right navegacion__contenido" id="navbarNav">
         <ul class="navbar-nav navegacion__contenido-lista">
           <li class="nav-item navegacion__quiensoy">
             <a class="nav-link navegacion__contenido-link" href="sobre-mi.html">Quien soy <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item d-md-none">
+          <li class="nav-item d-lg-none">
             <a class="nav-link navegacion__contenido-link" href="#">Diseño UX<span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item d-md-none">
+          <li class="nav-item d-lg-none">
             <a class="nav-link navegacion__contenido-link" href="diseno-grafico.html">Diseño gráfico<span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item d-md-none">
+          <li class="nav-item d-lg-none">
             <a class="nav-link navegacion__contenido-link" href="ilustracion.html">Ilustración<span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item dropdown d-none d-md-block">
+          <li class="nav-item dropdown d-none d-lg-block">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Mis trabajos
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Diseño UX</a>
+              <a class="dropdown-item" href="index.html#disenoux">Diseño UX</a>
               <a class="dropdown-item" href="#">Diseño UI</a>
               <a class="dropdown-item" href="diseno-grafico.html">Diseño gráfico</a>
               <a class="dropdown-item" href="ilustracion.html">Ilustración</a>
